fix(footer): better contact box style on mobile

--- a/src/blocks/footer/style.css
+++ b/src/blocks/footer/style.css
@@ -177,6 +177,17 @@
     text-align: center;
 }
 
+@media (max-width: 600px) {
+    .evolutio-footer__top {
+        padding: 0;
+    }
+
+    .evolutio-footer__contactbox {
+        border-radius: 0 0 25px 25px;
+    }
+
+}
+
 @media (max-width: 782px) {
     .evolutio-footer__brandcontainer {
         min-width: 100%;
